--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,12 @@ height: 150px;
 }
 
 footer {
+  left: 0;
+  right: 0;
+  margin: 0;
+  bottom: 0;
+  padding: 0;
+  position: fixed;
   background: rgb(110, 64, 110);
   width: 100%;
 }
@@ -88,5 +94,5 @@ footer {
 }
 
 #song-list {
-  padding: 10px;
+  padding: 5px;
 }
